# dprint-plugin-assignment-fixer

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  QUICKSTART.md  README.md  build-and-install.sh  dprint.json  setup-in-website.sh  test-assignment-fixer.ts  test-build.sh  uninstall.sh
src/: lib.rs
